# strelka

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  NOTICE  NOTICE2  README.md  compile_test.py  generate_curve_certificates.py  go.mod  go.sum  go.work  go.work.sum  merge.py  pyproject.toml  requirements.txt  scan_bmp_eof.py  scan_lsb.py  scan_nf.py  scan_png_eof.py  setup.py  strelka.proto  strelka.py  strelka_dirstream.py  strelka_pb2.py  strelka_pb2_grpc.py  strelka_standalone.py  strelka_user_client.py  test.py  test_to_send_rule.py  validate_yara.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-go-binaries-on-release.yml  build.yml  build_daily.yml  build_fileshot_daily.yml  build_filestream_daily.yml  build_main_daily.yml  build_main_push.yml  build_master_push.yml  build_oneshot_daily.yml  build_strelka_daily.yml  build_strelka_nightly.yml  build_strelka_on_pull_request.yml  nightly.yml  (+9 more)
cfg/: backend.yaml  frontend.yaml
client/: __init__.py  lib.py  requirements.txt
docker/: docker-compose.yaml
docs/: README.md  index.html
envoy/: envoy.yaml
etc/: conf.py  logging.yaml  scan.yaml  server.yaml  strelka.yaml  strelka.yml
server/: __init__.py  distribution.py  lib.py  objects.py  strelka.proto
shared/: __init__.py  conf.py  errors.py  utils.py
strelka/: core.py  errors.py
tests/: test_scan_pe.py
yaraify-rules/: AHK_DarkGate_Payload_April_2024.yar  AMSIbypass_CLR_DLL.yar  APT_Bitter_Almond_RAT.yar  APT_Bitter_Maldoc_Verify.yar  APT_Bitter_PDB_Paths.yar  APT_CN_Stately_Taurus_DLL_Backdoor_April2024.yar  APT_CN__Package2_DLL_April2024.yar  APT_CN__Package2_EXE_April2024.yar  APT_Muddy_Water_MSI_RMM_Atera_April2024.yar  APT_Patchwork_Code_Signing_Cert_March2024.yar  AgentTesla_DIFF_Common_Strings_01.yar  Android_Accessibility_Service_Abuse.yar  Android_Admin_And_Accessibility.yar  Android_Backdoor_Xamalicious.yar  Android_BankingTrojan_Hydra.yar  AppLaunch.yar  AteraAgent_RemoteAdmin_April_2024.yar  AtlasB_Batch_Crypter.yar  BAT_DbatLoader.yar  BadIISModule.yar  BadIIS_JKornevHidden.yar  BatModifier1.yar  BatModifier2.yar  BatModifier3.yar  BlackMoon.yar  BrainCipher.yar  BrowserExtensionLoader.yar  BruteRatelConfig.yar  BunnyLoader.yar  CAP_WerFaultSecure_Freeze_Technique.yar  CRU_Xerph_Stealer_v0.yar  CVE_2017_17215.yar  CVE_2025_8088_rar_ADS_traversal.yar  CVE_2026_21509_RTF_ShellExplorer.yar  CVE_2026_2441_FontFeatureValues_UAF.yar  Capability_Embedded_Lua.yar  Chinese_APT_Backdoor.yar  ClipperDLL_Amadey.yar  Credential_Leak_Detector_API_2.yar  CrimsonRAT.yar  (+399 more)
(+500 files in other folders)
